Added test for instance run action